# Tamia_token

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  logs.txt
programs/tamiacoin/: Cargo.toml
programs/tamiacoin/src/: distribution.rs  lib.rs
tests/: logs.txt  tamiacoin.ts
