[workspace]
members = [
    "programs/tamiacoin"
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = false
codegen-units = 1

[profile.release]
opt-level = "z"        # Minimize binary size
lto = "thin"           # Good balance: smaller + faster compile
codegen-units = 1      # Combine all units to maximize optimization
incremental = false    # Avoid leftover build cache
overflow-checks = true
panic = "abort"        # Prevent panic unwinding
strip = true           # Remove debug symbols for smaller binaries
