[package]
name = "tamiacoin-program"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"] # Important to create a dynamic library (.so)

[features]
no-entrypoint = []
cpi = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
